// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > renders correctly with icon 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1.5 px-2.5 py-1.5 text-sm bg-primary text-inverted hover:bg-primary/75 focus-visible:outline-primary active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary"
    data-slot="base"
  >
    
    <svg
      aria-hidden="true"
      class="shrink-0 size-4"
      data-slot="leadingIcon"
      height="1em"
      role="img"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    />
    
    
    <span
      class="truncate"
      data-slot="label"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with icon and leading 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1.5 px-2.5 py-1.5 text-sm bg-primary text-inverted hover:bg-primary/75 focus-visible:outline-primary active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary"
    data-slot="base"
  >
    
    <svg
      aria-hidden="true"
      class="shrink-0 size-4"
      data-slot="leadingIcon"
      height="1em"
      role="img"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    />
    
    
    <span
      class="truncate"
      data-slot="label"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with icon and trailing 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1.5 px-2.5 py-1.5 text-sm bg-primary text-inverted hover:bg-primary/75 focus-visible:outline-primary active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary"
    data-slot="base"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
      data-slot="label"
    >
      Button
    </span>
    
    
    <svg
      aria-hidden="true"
      class="shrink-0 size-4"
      data-slot="trailingIcon"
      height="1em"
      role="img"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    />
    
  </button>
</div>
`;

exports[`Button > renders correctly with label 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1.5 px-2.5 py-1.5 text-sm bg-primary text-inverted hover:bg-primary/75 focus-visible:outline-primary active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary"
    data-slot="base"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
      data-slot="label"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with leading and trailing icons 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1.5 px-2.5 py-1.5 text-sm bg-primary text-inverted hover:bg-primary/75 focus-visible:outline-primary active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary"
    data-slot="base"
  >
    
    <svg
      aria-hidden="true"
      class="shrink-0 size-4"
      data-slot="leadingIcon"
      height="1em"
      role="img"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    />
    
    
    <span
      class="truncate"
      data-slot="label"
    >
      Button
    </span>
    
    
    <svg
      aria-hidden="true"
      class="shrink-0 size-4"
      data-slot="trailingIcon"
      height="1em"
      role="img"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    />
    
  </button>
</div>
`;

exports[`Button > renders correctly with leading icon 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1.5 px-2.5 py-1.5 text-sm bg-primary text-inverted hover:bg-primary/75 focus-visible:outline-primary active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary"
    data-slot="base"
  >
    
    <svg
      aria-hidden="true"
      class="shrink-0 size-4"
      data-slot="leadingIcon"
      height="1em"
      role="img"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    />
    
    
    <span
      class="truncate"
      data-slot="label"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with neutral variant ghost 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 disabled:bg-transparent aria-disabled:bg-transparent gap-1.5 px-2.5 py-1.5 text-sm text-default hover:bg-elevated focus-visible:outline-inverted active:bg-elevated"
    data-slot="base"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
      data-slot="label"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with neutral variant link 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1.5 px-2.5 py-1.5 text-sm text-muted hover:text-default focus-visible:outline-inverted active:text-default"
    data-slot="base"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
      data-slot="label"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with neutral variant outline 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 ring ring-inset gap-1.5 px-2.5 py-1.5 text-sm bg-default text-default ring-accented hover:bg-elevated focus-visible:outline-inverted active:bg-elevated disabled:bg-default"
    data-slot="base"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
      data-slot="label"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with neutral variant soft 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1.5 px-2.5 py-1.5 text-sm bg-elevated text-default hover:bg-accented/75 focus-visible:outline-inverted active:bg-accented/75 disabled:bg-elevated"
    data-slot="base"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
      data-slot="label"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with neutral variant solid 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1.5 px-2.5 py-1.5 text-sm bg-inverted text-inverted hover:bg-inverted/90 focus-visible:outline-inverted active:bg-inverted/90 disabled:bg-inverted aria-disabled:bg-inverted"
    data-slot="base"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
      data-slot="label"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with neutral variant subtle 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 ring ring-inset gap-1.5 px-2.5 py-1.5 text-sm bg-elevated text-default ring-accented hover:bg-accented/75 focus-visible:outline-inverted active:bg-accented/75 disabled:bg-elevated"
    data-slot="base"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
      data-slot="label"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with primary variant ghost 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 disabled:bg-transparent aria-disabled:bg-transparent gap-1.5 px-2.5 py-1.5 text-sm text-primary hover:bg-primary/10 focus-visible:outline-primary active:bg-primary/10"
    data-slot="base"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
      data-slot="label"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with primary variant link 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1.5 px-2.5 py-1.5 text-sm text-primary hover:text-primary/75 focus-visible:outline-primary active:text-primary/75"
    data-slot="base"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
      data-slot="label"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with primary variant outline 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 ring ring-inset gap-1.5 px-2.5 py-1.5 text-sm text-primary ring-primary/50 hover:bg-primary/10 focus-visible:outline-primary active:bg-primary/10 disabled:bg-transparent"
    data-slot="base"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
      data-slot="label"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with primary variant soft 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1.5 px-2.5 py-1.5 text-sm bg-primary/10 text-primary hover:bg-primary/15 focus-visible:outline-primary active:bg-primary/15 disabled:bg-primary/10"
    data-slot="base"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
      data-slot="label"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with primary variant solid 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1.5 px-2.5 py-1.5 text-sm bg-primary text-inverted hover:bg-primary/75 focus-visible:outline-primary active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary"
    data-slot="base"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
      data-slot="label"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with primary variant subtle 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 ring ring-inset gap-1.5 px-2.5 py-1.5 text-sm bg-primary/10 text-primary ring-primary/25 hover:bg-primary/15 focus-visible:outline-primary active:bg-primary/15 disabled:bg-primary/10"
    data-slot="base"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
      data-slot="label"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with size lg 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-2 px-3 py-2 text-base bg-primary text-inverted hover:bg-primary/75 focus-visible:outline-primary active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary"
    data-slot="base"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
      data-slot="label"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with size md 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1.5 px-2.5 py-1.5 text-sm bg-primary text-inverted hover:bg-primary/75 focus-visible:outline-primary active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary"
    data-slot="base"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
      data-slot="label"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with size sm 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1 px-2 py-1 text-xs bg-primary text-inverted hover:bg-primary/75 focus-visible:outline-primary active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary"
    data-slot="base"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
      data-slot="label"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with slots 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1.5 px-2.5 py-1.5 text-sm bg-primary text-inverted hover:bg-primary/75 focus-visible:outline-primary active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary"
    data-slot="base"
  >
    
    Leading slot
    
    
    Default slot
    
    
    Trailing slot
    
  </button>
</div>
`;

exports[`Button > renders correctly with square icon-only and size lg 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-2 text-base bg-primary text-inverted hover:bg-primary/75 focus-visible:outline-primary active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary p-2"
    data-slot="base"
  >
    
    <svg
      aria-hidden="true"
      class="shrink-0 size-5"
      data-slot="leadingIcon"
      height="1em"
      role="img"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    />
    
    
    <!--v-if-->
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with square icon-only and size md 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1.5 text-sm bg-primary text-inverted hover:bg-primary/75 focus-visible:outline-primary active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary p-1.5"
    data-slot="base"
  >
    
    <svg
      aria-hidden="true"
      class="shrink-0 size-4"
      data-slot="leadingIcon"
      height="1em"
      role="img"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    />
    
    
    <!--v-if-->
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with square icon-only and size sm 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1 text-xs bg-primary text-inverted hover:bg-primary/75 focus-visible:outline-primary active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary p-1"
    data-slot="base"
  >
    
    <svg
      aria-hidden="true"
      class="shrink-0 size-3"
      data-slot="leadingIcon"
      height="1em"
      role="img"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    />
    
    
    <!--v-if-->
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with trailing icon 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1.5 px-2.5 py-1.5 text-sm bg-primary text-inverted hover:bg-primary/75 focus-visible:outline-primary active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary"
    data-slot="base"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
      data-slot="label"
    >
      Button
    </span>
    
    
    <svg
      aria-hidden="true"
      class="shrink-0 size-4"
      data-slot="trailingIcon"
      height="1em"
      role="img"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    />
    
  </button>
</div>
`;
